fixed: main takes 100vh and overflow hidden, cuz kegs image is fixed in viewport

--- a/main.css
+++ b/main.css
@@ -75,7 +75,8 @@ section.bartenders {
 main {
   background-color: #333333;
   padding: 13vh 0;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
 h1 {
   font-size: 1.7vw;
@@ -85,4 +86,7 @@ h1 {
   text-align: right;
   transform-origin: right top;
   transform: rotate(-90deg) translate(-1vw, -8.2vw);
+}
+section.glasses {
+  height: 100px;
 }
